[package]
name = "sui_rust_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
reqwest = { version = "0.11.20", default_features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3.28"
futures-core = "0.3.21"
serial_test = "2.0.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde_json = { version = "1.0.95", features = [
  "preserve_order",
  "arbitrary_precision",
] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"


[lib]
name = "sui_rust_sdk"
crate-type = ["staticlib", "cdylib"]
path = "src/sui_rust_wrapper_c.rs"