[package]
name = "sui_rust_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
reqwest = { version = "0.11.20", default_features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
dirs = "4.0.0"
tempfile = "3.3.0"
bcs = "0.1.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3.28"
futures-core = "0.3.21"
serial_test = "2.0.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde_json = { version = "1.0.95", features = [
  "preserve_order",
  "arbitrary_precision",
] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"
once_cell = "1.8.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6", package = "fastcrypto-zkp" }
rand = "0.8.5"

[lib]
name = "sui_rust_sdk"
crate-type = ["staticlib", "cdylib"]
path = "src/sui_sdk_lib.rs"
